# tcUnicodeHelper

./: README.md  library.json  library.properties  platformio-test.ini  platformio.ini
.github/workflows/: build.yml  platformio.yml
cmake/: CMakeLists.txt
examples/adaUnicodeShim/: adaUnicodeShim.ino
examples/adafruitGfxUnicode/: adafruitGfxUnicode.ino
examples/utf8decoder/: utf8decoder.ino
fontXmls/: B612Regular8pt.xml  OpenSansCyrillicLatin12.xml  OpenSansCyrillicLatin14.xml  OpenSansCyrillicLatin18.xml  OpenSansRegular10pt.xml  OpenSansRegular12pt.xml  OpenSansRegular14pt.xml  OpenSansRegular16pt.xml  OpenSansRegular18pt.xml  OpenSansRegular7pt.xml  OpenSansRegular8pt.xml  README.md  RobotoMedium18pt.xml  RobotoMedium24pt.xml  RobotoRegular12pt.xml  RobotoRegular14pt.xml  RobotoRegular16pt.xml  RobotoRegular18pt.xml  opensans-regular-corrected-8pt.xml
src/: UnicodeFontDefs.h  Utf8TextProcessor.cpp  Utf8TextProcessor.h  tcUnicodeAdaGFX.h  tcUnicodeHelper.cpp  tcUnicodeHelper.h  tcUnicodeTFT_eSPI.h  tcUnicodeU8G2.h
src/Fonts/: B612Regular8pt.h  OpenSansCyrillicLatin12.h  OpenSansCyrillicLatin14.h  OpenSansCyrillicLatin18.h  OpenSansRegular10pt.h  OpenSansRegular12pt.h  OpenSansRegular14pt.h  OpenSansRegular16pt.h  OpenSansRegular18pt.h  OpenSansRegular7pt.h  OpenSansRegular8pt.h  RobotoMedium18.h  RobotoMedium24.h  RobotoRegular12pt.h  RobotoRegular14pt.h  RobotoRegular16pt.h  RobotoRegular18pt.h
test/test_unicode_font/: unicodeFontTests.cpp
test/test_utf8_processing/: utf8Processing.cpp
tests/utf8Processing/: unicodeFontTests.cpp  utf8Processing.cpp
